example/lib/src/generated/errors/errors_localization_lo.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Lao (`lo`).
class ErrorsLocalizationLo extends ErrorsLocalization {
  ErrorsLocalizationLo([String locale = 'lo']) : super(locale);

  @override
  String get error => 'ມີບັດສະບັດ';

  @override
  String get unexpectedError => 'ເກິດບັດທີ່ບໍ່ຄາດຄິດ';

  @override
  String get bugReportSentText => 'Bug report sent successfully.';
}
